[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "cycling_utils"
version = "0.0.2"
description = "Utilities to assist with distributed deep learning on Strong Compute."
readme = "README.md"
requires-python = ">= 3.10"
authors = [
    {name = "Adam Peaston", email = "adam@strongcompute.com"},
    {name = "Fennecs Swaddle", email = "fennecs@strongcompute.com"}
]

[tool.setuptools.packages.find]
where = ["."]
